--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-alert": "^7.0.3",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.3.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12",
+    "react-native-hsv-color-picker": "^1.0.2",
+    "react-native-web": "^0.17.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-alert": "^5.2.0",
+    "@types/react-color": "^3.0.5",
     "@types/react-native": "~0.63.2",
     "@types/react-router-dom": "^5.1.7",
     "typescript": "~4.0.0"
