--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
+    "@material-ui/core": "^4.12.3",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-alert": "^7.0.3",
     "react-color": "^2.19.3",
     "react-colorful": "^5.3.0",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-hsv-color-picker": "^1.0.2",
