--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.2",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
+    "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-color": "^2.19.3",
     "react-colorful": "^5.3.0",
